<resources>
    <string name="app_name">Work Toc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cliente">Publicar Trabajo</string>
    <string name="menu_cliente_editar">Mis Solicitudes</string>
    <string name="menu_mis_solicitudes">Mis Solicitudes</string>
    <string name="menu_cliente_buscar_trabajador">Buscar Trabajadores</string>
    <string name="menu_buscar_trabajador">"Buscar... "</string>
    <string name="menu_usuarios_trabajadores">Lista de Contactos</string>
    <string name="menu_solicitar_cuenta">Solicitar Cuenta Trabajador</string>
    <string name="menu_inicio_trabajador">Buscar Trabajo</string>
    <string name="bienvenido">Benvenido a Work Toc</string>
</resources>
