<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtBienvenido"

            android:layout_width="233dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:text="@string/bienvenido"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtnombreHeader"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>
